RM Search enhancements and fixes: . Date Insert calendar component - inserts a date in query encoded format . "All Records/Folders" search can now be performed by simply clicking Search with no query terms (i.e no need for ISNODE:T or similar query) . Cutoff is now a selectable search constraint (like Frozen or Vital Record) . Increased height of the results meta-data selection box . Fix to issue where custom props were not showing correct label - since service API changes . Fix to issue where Saved Search would not be updated in menu if an item with the same label already existed
git-svn-id: https://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@16166 7033f55c-6c29-4ad8-afba-765cb616e738

Former-commit-id: 892389e1c59ab272839a5496f286ce4bce8ebdcf

--- a/root/modules/dod-5015-share/source/web/components/rmsearch/rmsearch.css
+++ b/root/modules/dod-5015-share/source/web/components/rmsearch/rmsearch.css
@@ -84,9 +84,28 @@
    vertical-align: 15%;
 }
 
+.search .insertDate
+{
+   vertical-align: 15%;
+   padding-left: 2em;
+}
+
 .search .execute-search
 {
    border-top: 1px solid #AAAAAA;
    margin-top: 8px;
    padding-top: 12px;
+}
+
+.search .datepicker
+{
+   display: none; 
+   position: absolute; 
+   z-index: 1;
+   margin: -5em 0 0 20em;
+}
+
+.search .datepicker-icon
+{
+   cursor: pointer;
 }
